# VirtualMonitor.Android

./: .project  Note.md  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/libs/armeabi-v7a/pkgconfig/: libavfilter.pc  libswscale.pc
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CorePlayer.c  CorePlayer.cpp  decodeTest.cpp  native-lib.cpp
app/src/main/cpp/include/libavcodec/: avcodec.h
app/src/main/cpp/jni/: Android.mk
app/src/main/java/com/stanley/virtualmonitor/: AsyncDecoder.java  BaseNativeInterface.java  EncodeDecodeTest.java  HwDecodeBridge.java  JNIUtils.java  MainActivity.java  MyVideoView.java  OnErrorCodeListener.java  Player.java  SSlUtils.java  SearchThread.java  Sender.java  SimpleServer.java  SurfaceTextureBridge.java  TCPServer.java  UDPServer.java  USBClient.java
app/src/main/java/org/java_websocket/: AbstractWebSocket.java  SSLSocketChannel.java  SSLSocketChannel2.java  WebSocketImpl.java
app/src/main/java/org/java_websocket/drafts/: Draft_6455.java
app/src/main/java/org/java_websocket/server/: WebSocketServer.java
app/src/main/jniLibs/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswresample.pc
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
